<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/customDialog"
    android:layout_width="350dp"
    android:layout_height="match_parent"
    app:layout_constraintHeight_default="percent"
    app:layout_constraintWidth_percent=".90"
    android:background="@drawable/shape_rounded"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/dialogImgTitle"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dialogTitle"
        app:srcCompat="@drawable/ic_logo_anagrama" />

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="4dp"
        android:text="@string/dialogTareaTitleNueva"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/dialogImgTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dialogBoxTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/dialogEditTextContentDescription"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogTitle"
        tools:hint="@string/dialogBoxTxtHint" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_rounded"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/dialogBtnAddTxt"
        android:textColor="@color/textColorLight"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogBoxTxt" />

    <Button
        android:id="@+id/btnCanel"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_rounded_border"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/dialogBtnCancelTxt"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnAdd"
        app:layout_constraintEnd_toStartOf="@+id/btnAdd" />



</androidx.constraintlayout.widget.ConstraintLayout>