<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LoginLayoutLinear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:contentDescription="@string/loginContentDescriptionImage"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_login_bg" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/registerTit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/splashLogoContentDescription"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".45"
            app:srcCompat="@drawable/ic_logo_todo_color" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contentUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerTit">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginTextInputUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/loginUsuarioHint"
                android:inputType="textEmailAddress">

                <requestFocus />
            </com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contentPassWord"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/contentUser"
            app:layout_constraintStart_toStartOf="@id/contentUser"
            app:layout_constraintTop_toBottomOf="@+id/contentUser">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginTextInputPassWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/loginPassHint"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnAcceptLogin"
            style="@style/buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded"
            android:text="@string/loginButtonLoginTxt"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="@+id/contentPassWord"
            app:layout_constraintStart_toStartOf="@+id/contentPassWord"
            app:layout_constraintTop_toBottomOf="@+id/contentPassWord" />

        <Button
            android:id="@+id/btnRegisterLogin"
            style="@style/buttons"
            android:text="@string/loginButtonRegisterTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded_border"
            app:layout_constraintEnd_toEndOf="@+id/contentPassWord"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/contentPassWord"
            app:layout_constraintTop_toBottomOf="@+id/btnAcceptLogin"
            android:textColor="@color/button_rouned_border_text_color"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>