<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/RegisterLayoutLinear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="0dp"
        tools:context=".RegisterActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:contentDescription="@string/loginContentDescriptionImage"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_register_bg" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/registerTit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/splashLogoContentDescription"
                android:fontFamily="@font/montserrat_bold"
                android:letterSpacing=".3"
                android:text="@string/registerTit"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent=".10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".45" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/contentUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerTit">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerTextInputUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/loginUsuarioHint"
                    android:inputType="textEmailAddress">

                    <requestFocus />
                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/contentPassWord"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/contentUser"
                app:layout_constraintStart_toStartOf="@id/contentUser"
                app:layout_constraintTop_toBottomOf="@+id/contentUser">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerTextInputPassWord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/loginPassHint"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/contentPassWordRepeat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/contentPassWord"
                app:layout_constraintStart_toStartOf="@id/contentPassWord"
                app:layout_constraintTop_toBottomOf="@+id/contentPassWord">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerTextInputPassWordRepeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registerRepeatPassHint"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/contentPassWordRepeat"
                app:layout_constraintStart_toStartOf="@id/contentPassWordRepeat"
                app:layout_constraintTop_toBottomOf="@+id/contentPassWordRepeat"
                android:gravity="center">

                <Button
                    android:id="@+id/buttonRegister"
                    style="@style/buttons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_rounded_border"
                    android:text="@string/buttonCancel"
                    android:layout_gravity="start"
                    android:layout_weight=".65"
                    android:textColor="@color/button_rouned_border_text_color"/>

                <Space
                    android:layout_width="16dp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/buttonLogin"
                    style="@style/buttons"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_rounded"
                    android:text="@string/buttonAcept"
                    android:layout_gravity="end"
                    android:textColor="@android:color/white"/>
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>