<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/customDialogDeleteTask"
    android:layout_width="350dp"
    android:layout_height="match_parent"
    app:layout_constraintHeight_default="percent"
    app:layout_constraintWidth_percent=".90"
    android:background="@drawable/shape_rounded"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/dialogDeleteImgTitle"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/dialogDeleteImageTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dialogDeleteTitle"
        app:srcCompat="@drawable/ic_logo_anagrama" />

    <TextView
        android:id="@+id/dialogDeleteTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:text="@string/dialogDeleteTitle"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dialogDeleteImgTitle"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnDelete"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_rounded"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/dialogBtnDeleteTxt"
        android:textColor="@color/textColorLight"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCancelDelete"
        app:layout_constraintTop_toBottomOf="@+id/dialogDeleteTitle" />

    <Button
        android:id="@+id/btnCancelDelete"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_rounded_border"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/dialogBtnCancelTxt"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnDelete"
        app:layout_constraintEnd_toStartOf="@+id/btnDelete"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>