<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/splashBg"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/splashBgContentDescription"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".50"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_splash_bg" />

    <TextView
        android:id="@+id/splashGuideImagePosition"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/splashBg" />

    <ImageView
        android:id="@+id/splashImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/splashImageContentDescription"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/splashGuideImagePosition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".45"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_splash_img" />

    <ImageView
        android:id="@+id/splashLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/splashLogoContentDescription"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/splashImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".45"
        app:srcCompat="@drawable/ic_logo_todo_color" />


    <TextView
        android:id="@+id/textViewSplashCreditos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="serif-monospace"
        android:text="@string/author"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/textColorLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>